--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
     <title>Spot the Mistake</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z6V4ZXXZXS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Z6V4ZXXZXS');
+</script>
 <body>
     <div class="container">
         <h1>Spot the Mistake</h1>
